feat: 校验生产与 LLM 配置